# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
__env__/dev/: compose.yaml
__env__/dev/db/: Dockerfile  init.sql
page_analyzer/: __init__.py  app.py  db.py  lib.py
page_analyzer/models/: __init__.py  url_checks.py  urls.py
page_analyzer/templates/: 404.html  index.html  layout.html
page_analyzer/templates/urls/: index.html  show.html
